--- a/LinearRegression/LinearRegression_Implementation.ipynb
+++ b/LinearRegression/LinearRegression_Implementation.ipynb
@@ -2760,6 +2760,7 @@
     }
    ],
    "source": [
+    "# Plotting scatter plot\n",
     "px.scatter(x=train_data['x'], y=train_data['y'], template = 'seaborn')"
    ]
   },
